Changes made:
added humans.txt to identify contributers and project info, and linked it in <head> of index
added css foreground fullscreen animation using custom keyframes
