@@ -11,7 +11,9 @@ border:0;
 }
 body{
 	height:950px;
+
 }
+/* Start http://www.cursors-4u.com */ body, a:hover {cursor: url(http://cur.cursors-4u.net/nature/nat-4/nat387.cur), progress !important;} /* End http://www.cursors-4u.com */
 .header{
 	position:relative;
 	width:100%;
