@@ -2,14 +2,7 @@
 <html>
 <audio src="welcome.mp3" autoplay="autoplay" loop="loop"></audio>
 <script>
-setInterval(function(){
-    if($('#myDiv').hasClass('divClassRed')){
-        $('#myDiv').addClass('divClassBlue').removeClass('divClassRed');            
-    }else{
-        $('#myDiv').addClass('divClassRed').removeClass('divClassBlue');
-    }
 
-},1000);
 </script>
 <head>
 <link rel="stylesheet" href="css/aboutme.css">
