@@ -32,7 +32,7 @@ setInterval(function(){
         </ul>
     </div>
     <div class="content">
-        <div id="snow"></div>
+       
     	<div class="bannerid">
         	Food
         </div>
