@@ -32,7 +32,7 @@ setInterval(function(){
         </ul>
     </div>
     <div class="content">
-        <div id="snow"></div>
+        
     	<div class="bannerid">
         	Winter Sports
         </div>
@@ -60,6 +60,7 @@ setInterval(function(){
                 <p class="pinfos"><a href="contents/s12.html">BiAthalon</a></p>
             	</div>
             </div>
+
         </div>	
     </div>
     
